[package]
name = "pfx-to-pem"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
thiserror = "1.0"

better-panic = "0.3"
clap = { version = "4.5", features = ["derive", "env", "cargo", "wrap_help"] }
human-panic = "1.2"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"


p12-keystore = "0.1"
pem = "3.0"
x509-parser = "0.16"

env_logger = "0.11"
log = "0.4"

hide = "0.1"

widgetui = "0.6"
crokey = "1.0"
new_mime_guess = "4.0"
cli-clipboard = "0.4"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
