[package]
name = "pfxers"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platformTUI allowing to easily extract and convert information from PFX and PEM certificates and keys"
repository = "https://github.com/s-ted/pfxers"
keywords = ["PFX", "PEM", "certificate", "TUI"]
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6"
thiserror = "1.0"

clap = { version = "4.5", features = ["derive", "env", "cargo", "wrap_help"] }
better-panic = "0.3"
human-panic = "2.0"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"


p12-keystore = "0.1"
pem = "3.0"
x509-parser = "0.16"

hide = "0.1"

widgetui = "0.6"
crokey = "1.0"
new_mime_guess = "4.0"
cli-clipboard = "0.4"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
